// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeNaN should return false for  (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31mstring[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for [] (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31marray[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for 1 (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31mnumber[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for NaN (isNot true) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should not be [32mNaN[39m.
    got: [31mnumber[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for Symbol() (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31msymbol[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for false (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31mboolean[39m
",
  "pass": false,
}
`;

exports[`testing toBeNaN should return false for true (isNot false) 1`] = `
Object {
  "message": "    
    [1mexpected[22m should be [32mNaN[39m.
    got: [31mboolean[39m
",
  "pass": false,
}
`;
